<resources>
    <string name="app_name">Barometer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Barometer</string>
    <string name="sign_in">sing_in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="gebruikers_naam">gebruikersnaam</string>
    <string name="title_course_list_activity">Vakken</string>
    <string name="title_activity_instellingen">Instellingen</string>
    <string name="oke">Wijzigen</string>
    <string name="cancel">Cancel</string>
    <string name="grade_hint">Cijfer</string>
    <string name="cijfer_message">Voor het nieuwe cijfer in:</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="setting_restore_defaults">Herstel Instellingen</string>
    <string name="Voldoende">Voldoende</string>
    <string name="Onvoldoende">Onvoldoende</string>

    <!-- PERIODES -->
    <string name="periode1">Periode 1</string>
    <string name="periode2">Periode 2</string>
    <string name="periode3">Periode 3</string>
    <string name="periode4">Periode 4</string>
    <string name="zomervakantie">Zomervakantie</string>

    <!-- ADVIES -->
    <!-- PERIODE 1 -->
    <string name="adviesPeriode1">Deze periode kan je 13 studiepunten halen, het vak IOPR1 is een kernvak. Je moet minimaal 2 kernvakken halen dit jaar.</string>
    <!-- PERIODE 2 -->
    <string name="adviesPeriode2Positief">Vorige periode heb je niet alles gehaald, je P halen we wel volgend jaar :) INET en IRDB zijn kernvakken deze periode.</string>
    <string name="adviesPeriode2Negatief">Ga zo door!, INET en IRDB zijn kernvakken deze periode.</string>
    <!-- PERIODE 3 -->
    <string name="adviesPeriode3Positief">Je bent geweldig we gaan voor onze P!, IOPR2 is een kernvak deze periode.</string>
    <!-- PERIODE 4 -->
    <string name="adviesPeriode4Positief">Je kan nog je P halen kom op!, je specialisatievak is 10 studiepunten waard.</string>

    <!-- VAKANTIE -->
    <string name="zKlas">Veel succes in de Z klas.</string>
    <string name="jaar2">"Veel succes in het 2e jaar.</string>
    <string name="pGehaald">Gefeliciteerd je P in 1 jaar je bent een topper geniet van je vakantie.</string>

    <!-- ALGEMEEN 4 -->
    <string name="advies40Punten">Probeer de 40 punten te halen kom op je kan het!</string>
    <string name="advies50Punten">Probeer de 50 punten te halen kom op je kan het!</string>
    <string name="negatiefStudieAdvies">Neem contact op met je SLB, onvoldoende studiepunten.</string>
    <string name="ragequit">Je kan niet verder met deze opleiding.</string>

    <string name="mt">Mediatechnologie</string>
    <string name="SE">Software Engineering</string>
    <string name="FICT">Forensisch ICT</string>
    <string name="BDAM">Business Data Management</string>
    <string name="spec">spec</string>
    <string name="nothing_added">U heeft niets ingevuld.</string>
    <string name="same_name">U heeft dezelfde gebruikersnaam ingevuld.</string>
    <string name="changed_name">Uw gebruikersnaam is veranderd naar</string>
    <string name="default_set_back">U heeft de instellingen teruggezet naar de defaults.</string>
    <string name="spec_keuze">U heeft de specialisatie ingesteld op</string>
    <string name="samen_input">Deze specialisatie is al ingesteld.</string>

    <string name="change_name_string">Verander hier je gebruikersnaam.</string>
    <string name="opslaan_button">Opslaan</string>
    <string name="default_button_string">Herstel gegevens applicatie</string>
    <string name="hallo_string_main">Hallo, </string>
    <string name="year_string">Collegejaar</string>
    <string name="ects_string">Studiepunten</string>
    <string name="courses_string">Vakken</string>
    <string name="overview_string">Overzicht</string>
    <string name="username_hint">Gebruikersnaam</string>
    <string name="login_button_string">Login</string>
    <string name="insert_valid_grade">Voer een geldig cijfer in.</string>
    <string name="voldoende_string">Je hebt een voldoende.</string>
    <string name="onvoldoende_string">Je hebt een onvoldoende.</string>
    <string name="Voldoende_V">V</string>
    <string name="Onvoldoende_O">O</string>
    <string name="wrong_insertion">De ingevoerde waarde was verkeerd.</string>
    <string name="more_than_one">U heeft meer dan 1 specialisatie ingevuld.</string>
</resources>
