<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.barov.www.barometer.SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <TextView
        android:text="@string/change_name_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_naam"
        android:hint="Gebruikersnaam"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/opslaan_button"
        android:id="@+id/save_button"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="18dp"
        android:background="#B6B6B6" />

    <TextView
        android:text="Welke specialisatie kies je?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mt"
        android:id="@+id/radioButtonMT"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SE"
        android:id="@+id/radioButtonSE"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FICT"
        android:id="@+id/radioButtonFICT"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BDAM"
        android:id="@+id/radioButtonBDAM"
        android:checked="false"
        android:layout_marginBottom="12dp"/>

    <Button
        android:text="@string/opslaan_button"
        android:id="@+id/save_spec_button"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="18dp"
        android:background="#B6B6B6" />

    <Button
        android:text="@string/default_button_string"
        android:id="@+id/setDefaults"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>