<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.barov.www.barometer.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/logobarometer"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="150dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hallo_string_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/gebruiker"
                android:textStyle="bold"
                android:text="Gebruikernaam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/schooljaar"
            android:text="@string/year_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/periode"
            android:text="periode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/punten"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="57"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/ects_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/content_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:padding="4dp"
                android:text="@string/courses_string"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

            <Button
                android:id="@+id/overzicht"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview_string"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/advies"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
